--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,6 @@
 }
 
 
-
-
 .nav-link li {
     cursor: pointer;
 }
@@ -16,7 +14,6 @@
 body {
     background-color: black;
     min-height: 100vh;
-    width: 100%;
 }
 
 
@@ -223,3 +220,7 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 
+
+.show-card-container {
+  z-index: 999; /* Ensure it's on top of other content */
+}
